--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "otp-generator": "^4.0.0",
+    "socket.io": "^4.7.1",
     "tracer": "^1.1.6"
   }
 }
