--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "basic-auth": "^2.0.1",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "currency-formatter": "^1.5.9",
@@ -28,6 +29,8 @@
     "mongoose": "^6.7.2",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "otp-generator": "^4.0.0",
     "socket.io": "^4.7.1",
     "tracer": "^1.1.6"
