--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "otp-generator": "^4.0.0",
     "socket.io": "^4.7.1",
     "tracer": "^1.1.6"
+  },
+  "engines": {
+    "node": ">=16.20.1"
   }
 }
