--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "flutterwave-node-v3": "^1.0.11",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "mailtrap": "^3.2.0",
     "mongoose": "^6.7.2",
     "mongoose-unique-validator": "^3.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.8",
     "otp-generator": "^4.0.0",
     "socket.io": "^4.7.1",
     "tracer": "^1.1.6"
